ゲームスタート〜主人公をセットするまでを追加

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container-sm my-5">
-    <h2>ポケモン、ゲットだぜ〜〜！</h2> 
+    <!-- <h2>ポケモン、ゲットだぜ〜〜！</h2>  -->
   </div>
   <script src="dist/bundle.js"></script>
 </body>
